refactor: update navigation links styling

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         </div>
         
         <ul class="font-medium text-accent flex gap-8 xl:gap-12 text-white">
-          <li><a href="#home-section">Home</a></li>
-          <li><a href="#hotels-section">Hotels</a></li>
-          <li><a href="#benefits-section">Benefits</a></li>
-          <li><a href="#facts-section">Interesting facts</a></li>
+          <li class="hover:text-greenPrimary transition-all duration-200"><a href="#home-section">Home</a></li>
+          <li class="hover:text-greenPrimary transition-all duration-200"><a href="#hotels-section">Hotels</a></li>
+          <li class="hover:text-greenPrimary transition-all duration-200"><a href="#benefits-section">Benefits</a></li>
+          <li class="hover:text-greenPrimary transition-all duration-200"><a href="#facts-section">Interesting facts</a></li>
         </ul>
 
         <div class="flex grow basis-0 justify-end">
