--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="shortcut icon" href="./ico.ico" type="image/x-icon">
     <!-- ! Tailwind config -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -48,7 +49,7 @@
       <nav class="flex w-full px-4 sm:px-8 sm:w-[640px] md:w-[768px] justify-between h-[80px] rounded-xl md:hidden">
         <div class="text-lg flex gap-4 items-center text-white">
           <a href="#contact-section">
-            <img class="object-contain w-8" src="./assets/Desktop/logo.png" alt="Logo">
+            <img class="object-contain w-8" src="./assets/logo.png" alt="Logo">
           </a>
           <span class="dyn-name font-semibold"></span>
         </div>
@@ -75,7 +76,7 @@
       <nav class="flex w-full justify-between rounded-xl sm:px-8 lg:px-10 h-[80px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
         <div class="flex items-center grow basis-0 gap-10">
           <div class="font-normal text-lg text-white flex items-center gap-4">
-            <a href="#contact-section"><img class="object-contain w-10" src="./assets/Desktop/logo.png" alt="Logo"></a>
+            <a href="#contact-section"><img class="object-contain w-10" src="./assets/logo.png" alt="Logo"></a>
             <span class="dyn-name text-xl"></span>
           </div>
           
@@ -361,12 +362,12 @@
                   <div class="flex flex-col gap-2">
                     <label class="font-semibold text-lg text-white">Hotel</label>
                     <select name="hotel-quote" id="" class="rounded-lg p-2">
-                      <option value="Clermont Club">Clermont Club</option>
-                      <option value="Hippodrome Casino">Hippodrome Casino</option>
-                      <option value="Aspers Casino">Aspers Casino</option>
-                      <option value="Genting Casino">Genting Casino</option>
-                      <option value="ALEA Nottingham">ALEA Nottingham</option>
-                      <option value="Rainbow Casino">Rainbow Casino</option>
+                      <option value="DoubleTree">DoubleTree</option>
+                      <option value="Prestige Plaza">Prestige Plaza</option>
+                      <option value="Zedwell Piccadilly Circus">Zedwell Piccadilly Circus</option>
+                      <option value="St Giles">St Giles</option>
+                      <option value="Broadwick Soho">Broadwick Soho</option>
+                      
                     </select>
                   </div>
   
@@ -978,8 +979,9 @@
     <footer class="bg-blackPrimary flex justify-center py-10 md:py-14 lg:py-16 text-white">
       <div class="flex flex-col items-center px-4 sm:px-8 lg:px-10 gap-8 sm:gap-16 md:gap-10 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
         <div class="flex flex-col sm:flex-row gap-10 justify-between w-full">
-          <article class="flex justify-center">
-            <img class="w-10 object-contain" src="./logo.png" alt="Logo">            
+          <article class="flex flex-col gap-5 justify-center">
+            <img class="w-10 object-contain" src="./assets/logo.png" alt="Logo"> 
+            <span class="dyn-name text-lg lg:text-xl font-semibold"></span>           
           </article>
   
           <article>
