chore: fix quote overflow

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             </article>
 
             <article class="bg-[url(./assets/Mobile/DESTINATIONS-SUPPORT/BannerQuote.webp)] md:bg-[url(./assets/Tablet/DESTINATIONS-SUPPORT/BannerQuote.webp)] lg:bg-[url(./assets/Desktop/DESTINATIONS-SUPPORT/BannerQuote.webp)] bg-cover bg-center bg-no-repeat rounded-2xl">
-              <div class="flex flex-col gap-10 justify-center p-10 py-20 md:py-32 lg:py-16 lg:px-16 w-full lg:flex-row">
+              <div class="flex flex-col gap-10 justify-center p-10 py-20 md:py-32 lg:py-16 lg:px-16 max-w-[280px] sm:max-w-full lg:flex-row">
                 <form id="quote-form" class="flex flex-col gap-2 w-full lg:w-6/12 lg:py-20">
                   <div class="flex flex-col gap-2">
                     <label class="font-semibold text-lg text-white">Number of People</label>
