chore: update paddings

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <main>
         <!-- ? Home section -->
-        <section id="home-section" class="flex justify-center">
+        <section id="home-section" class="flex justify-center pb-14">
           <div class="flex flex-col h-[full] pt-[112px] sm:pt-[132px] lg:pt-[150px] 2xl:pt-[80px] px-4 sm:px-8 lg:px-10 gap-8 sm:gap-16 md:gap-10 sm:flex-col-reverse lg:flex-row-reverse sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
             <article class="lg:w-6/12 flex justify-center items-center h-full">
               <img class="sm:max-w-[500px] lg:max-w-[450px] xl:max-w-[550px] 2xl:max-w-[600px] object-contain shadow-hero-image h-max" src="./assets/Desktop/HERO+Modal/heroImg.jpg" alt="Animated woman traveling">
@@ -124,7 +124,7 @@
         </section>
 
         <!-- ? Hotels section -->
-        <section id="hotels-section" class="flex justify-center py-14">
+        <section id="hotels-section" class="flex justify-center py-5 md:py-6 lg:py-10 xl:py-14">
           <div class="flex flex-col px-4 sm:px-8 lg:px-10 gap-8 sm:gap-16 md:gap-10 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
             <article class="flex flex-col gap-3">
               <h2 class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-6xl md:text-center">
@@ -332,8 +332,8 @@
         </section>
 
         <!-- ? Quote section -->
-        <section id="hotels-section" class="flex justify-center py-14">
-          <div class="flex flex-col px-4 sm:px-8 lg:px-10 gap-8 sm:gap-16 md:gap-10 lg:gap-2 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
+        <section id="hotels-section" class="flex justify-center py-5 md:py-6 lg:py-10 xl:py-14">
+          <div class="flex flex-col px-4 sm:px-8 lg:px-10 gap-8 md:gap-6 lg:gap-2 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
             <article class="flex flex-col gap-3">
               <h2 class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-6xl md:text-center">
                 Get a <span class="text-greenPrimary">Quote</span>
@@ -341,8 +341,8 @@
             </article>
 
             <article class="bg-[url(./assets/Mobile/DESTINATIONS-SUPPORT/BannerQuote.webp)] md:bg-[url(./assets/Tablet/DESTINATIONS-SUPPORT/BannerQuote.webp)] lg:bg-[url(./assets/Desktop/DESTINATIONS-SUPPORT/BannerQuote.webp)] bg-cover bg-center bg-no-repeat rounded-2xl">
-              <div class="flex flex-col gap-10 justify-center p-10 py-20 md:py-32 lg:py-16 lg:px-16 max-w-[280px] sm:max-w-full lg:flex-row">
-                <form id="quote-form" class="flex flex-col gap-2 w-full lg:w-6/12 lg:py-20">
+              <div class="flex flex-col gap-10 justify-center p-10 lg:py-8 lg:px-16 max-w-[280px] sm:max-w-full lg:flex-row">
+                <form id="quote-form" class="flex flex-col gap-2 w-full lg:w-6/12">
                   <div class="flex flex-col gap-2">
                     <label class="font-semibold text-lg text-white">Number of People</label>
                     <select name="guests-quote" id="" class="rounded-lg p-2">
@@ -422,7 +422,7 @@
         </section>
         
         <!-- ? Benefits section -->
-        <section id="benefits-section" class="flex justify-center py-14">
+        <section id="benefits-section" class="flex justify-center py-5 md:py-6 lg:py-10 xl:py-14">
           <div class="flex flex-col px-4 sm:px-8 lg:px-10 gap-8 sm:gap-16 md:gap-10 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
             <article class="flex flex-col gap-3">
               <h2 class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-6xl md:text-center">
@@ -527,7 +527,7 @@
         </section>
 
         <!-- ? Contact section -->
-        <section id="contact-section" class="flex justify-center py-14">
+        <section id="contact-section" class="flex justify-center py-5 md:py-6 lg:py-10 xl:py-14">
           <div class="flex flex-col px-4 sm:px-8 lg:px-10 gap-8 sm:gap-16 md:gap-10 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
             <article class="flex flex-col gap-3">
               <h2 class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-6xl md:text-center">
@@ -600,7 +600,7 @@
         </section>
 
         <!-- ? Subscription section -->
-        <section id="subscription-section" class="flex justify-center py-14">
+        <section id="subscription-section" class="flex justify-center py-5 md:py-6 lg:py-10 xl:py-14">
           <div class="flex flex-col px-4 sm:px-8 lg:px-10 gap-8 sm:gap-16 md:gap-10 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
             <article class="flex flex-col gap-3">
               <h2 class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-6xl md:text-center">
@@ -686,7 +686,7 @@
         </section>
 
         <!-- ? Facts section -->
-        <section id="facts-section" class="flex justify-center py-14">
+        <section id="facts-section" class="flex justify-center py-5 md:py-6 lg:py-10 xl:py-14">
           <div class="flex flex-col px-4 sm:px-6 lg:px-10 py-8 gap-8 sm:gap-16 md:gap-10 sm:w-[640px] md:w-[768px] lg:w-[1024px] xl:w-[1280px] 2xl:w-[1400px]">
             <article class="flex flex-col gap-3">
               <h2 class="font-extrabold text-4xl md:text-5xl lg:text-6xl xl:text-6xl md:text-center">
